--- a/src/markdown/mas/exploratie_verklarende_variabelen.Rmd
+++ b/src/markdown/mas/exploratie_verklarende_variabelen.Rmd
@@ -309,15 +309,24 @@ for (var in telling_vars) {
 ## Discussie
 
 ```{r}
-exclude_hfdtlt <- c("andere_hfdtlt", "braakland_hfdtlt", "graangewassen_hfdtlt",
-                    "houtachtige_gewassen", "water_hfdtlt", "zaden_hfdtlt",
-                    "zomergranen_hfdtlt")
+q3_hfdtlt <- c("andere_hfdtlt", "braakland_hfdtlt", "graangewassen_hfdtlt",
+               "houtachtige_gewassen", "water_hfdtlt", "zaden_hfdtlt",
+               "zomergranen_hfdtlt")
+exclude_hfdtlt <- c("andere_hfdtlt", "braakland_hfdtlt", "houtachtige_gewassen", 
+                    "water_hfdtlt")
 exclude_vrtlt <- setdiff(vrtlt_vars, "afwezig_vrtlt")
 exclude_univars <- c(exclude_hfdtlt, exclude_vrtlt)
 ```
 
 
-Van de hoofdteelten zijn er een aantal variabelen met bijna geen data (geen/weinig oppervlakte binnen telcirkels). De volgende variabelen hebben nul als Q3: `r exclude_hfdtlt`. Deze zullen we verder uitsluiten.
+Van de hoofdteelten zijn er een aantal variabelen met bijna geen data (geen/weinig oppervlakte binnen telcirkels). De volgende variabelen hebben nul als Q3: `r q3_hfdtlt`.
+
+-  `andere_hfdtlt`: uitsluiten, dit zijn allicht heel zeldzame teelten waarvan we geen invloed verwachten
+-  `braakland_hfdtlt`: uitsluiten, dit kan belangrijk zijn, maar is allicht ook aanwezig in de laag van beheerovereenkomsten
+-  `houtachtige_gewassen`: uitsluiten, belangrijkste houtachtige gewassen zijn aanwezig in `meerjarige_fruitteelt_hfdtlt` en allicht soms ook in bepaalde variabelen van de kleine landschapselementen
+-  `water_hfdtlt`: uitsluiten, vermoedelijk niet van belang en bijna niet aanwezig
+-  `graangewassen_hfdtlt` en `zomergranen_hfdtlt`: belangrijk voor vogels, we tellen ze samen op onder `zomergranen_hfdtlt2`
+-  `zaden_hfdtlt`: belangrijk voor vogels, soms zelfs grote oppervlaktes
 
 Voor de voorteelten is er bijna geen data. We behouden enkel de proportie afwezige voorteelt.
 
@@ -327,7 +336,10 @@ bivar_vars <- setdiff(c(plot_vars, plotjaar_vars, telling_vars),
 
 bivariate_df <- mas_data_df %>%
   select(plotnaam, regio, jaar, periode_in_jaar, all_of(bivar_vars)) %>%
-  mutate(jaar = factor(jaar)) %>%
+  mutate(jaar = factor(jaar),
+         zomergranen_hfdtlt2 = rowSums(across(c(graangewassen_hfdtlt, 
+                                               zomergranen_hfdtlt)))) %>%
+  select(-c(graangewassen_hfdtlt, zomergranen_hfdtlt)) %>%
   distinct() %>%
   arrange(regio, jaar, plotnaam, periode_in_jaar)
 ```
